<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fitcoach.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    <action
        android:id="@+id/action_home_to_history"
        app:destination="@id/navigation_history"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true"
        app:launchSingleTop="true"/>
        <action
            android:id="@+id/action_home_to_exercise"
            app:destination="@id/navigation_exercise"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"
            app:launchSingleTop="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.example.fitcoach.ui.Social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.fitcoach.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@id/navigation_music"
        android:name="com.example.fitcoach.ui.Music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@id/navigation_exercise"
        android:name="com.example.fitcoach.ui.Exercise.ExerciseFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" />

</navigation>