<?xml version="1.0" encoding="utf-8"?>
<!-- Fragment pour l'affichage des informations pendant l'exercice -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="24dp">

    <!-- Affichage du chronomètre -->
    <com.example.fitcoach.utils.Timer
        android:id="@+id/time_value"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Affichage des données de l'exercice (pas, distance, calories) -->
    <LinearLayout
        android:id="@+id/metrics_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/time_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/steps_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_pas"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/calories_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Summary_calories"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_distance"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Summary_avg_speed"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Bouton de mise en pause du service -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pause_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/General_pause"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/metrics_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Bouton pour arrêter le service -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/General_stop"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/pause_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Conteneur pour les boutons de musique -->
    <LinearLayout
        android:id="@+id/music_buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/stop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <!-- Bouton de mise en pause de la musique -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/pause_music_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_pause"
            android:tint="@android:color/white"
            android:contentDescription="Pause"
            android:layout_marginEnd="12dp"/>

        <!-- Bouton pour changer la musique -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/change_music_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_next_music"
            android:tint="@android:color/white"
            android:contentDescription="Next"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
